grammar.txt
program = expression+

digit = [0-9]
letter = [a-zA-Z]
special_char = [_-=\$%&!\?\*\+\/\\><^]
integer = digit+
float = integer "." integer
boolean = true | false
string = '"' [letter | number | special_char]* '"'
identifier = string
keyword = [if | else | cond]

call = "(" identifier expr+ ")"

if = "(" if expr expr ")"

expr = integer
  | float
  | boolean
  | string
  | identifier
  | call
  | if
